# saaf-compliance-shell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  cli.py  pyproject.toml
.github/workflows/: audit.yml  branch-policy.yml  lint.yml  release.yml  test.yml
docs/: ARCHITECTURE.md  NAP_MAPPING.md  QUICKSTART.md  REVIEW_2026-04-18.md  REVIEW_2026-04-19_hardening.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  implementation_plan.md
guardrails/: config.yml  main.co  pii_masking.co  rails.co  topical.co
guardrails/actions/: absolutism_check.py  case_law_check.py  citation_check.py  cot_leakage_check.py  currency_check.py  cve_check.py  deadline_check.py  jurisdiction_check.py  presidio_redact.py  regulator_check.py  self_check_direct.py  stale_date_check.py  standards_version_check.py  verdict_check.py
guardrails_config/: config.yml
guardrails_config/actions/: absolutism_check.py  case_law_check.py  citation_check.py  cot_leakage_check.py  currency_check.py  cve_check.py  deadline_check.py  jurisdiction_check.py  presidio_redact.py  regulator_check.py  self_check_direct.py  stale_date_check.py  standards_version_check.py  verdict_check.py
modules/audit/: log.py
modules/guardrails/: __init__.py  absolutism_rule.py  audit_emit.py  case_law_rule.py  citation_rule.py  cot_leakage_rule.py  currency_rule.py  cve_rule.py  deadline_rule.py  jurisdiction_rule.py  output_scan.py  red_team.py  regulator_rule.py  routing_check.py  service.py  stale_date_rule.py  standards_version_rule.py  verdict_rule.py
modules/isolation/: __init__.py  agentfs.py  firecracker.py  network.py  runtime.py  session_lock.py  smoke.py
modules/manifest/: validator.py
modules/router/: privacy_router.py
ops/systemd/: README.md  saaf-guardrails.service  saaf-log-retention.service  saaf-log-retention.timer  saaf-router.service  services.env.example
scripts/: build-kernel.sh  build-rootfs-fedoraserver.sh  build-rootfs.sh  check-kvm.sh  check_branch_portability.py  debug_vm_manifest.py  debug_vm_probe.py  enforce_audit_retention.py  guest-probe.py  inspect_agentfs_db.py  inspect_guardrails_result.py  make-release-tarball.sh  query_agentfs_dentry.py  read_agentfs_file.py  rootfs-init.sh  run_vm_probe.py  setup-fedoraserver.sh  setup-linux-host.sh  setup-ollama-local.sh  setup-ollama-maindev.sh  start-guardrails-local.py  validate_guardrails_routing.py  verify-release.sh
tests/: test_absolutism_check.py  test_action_loader.py  test_audit_fixtures.py  test_audit_log.py  test_branch_portability.py  test_case_law_check.py  test_citation_check.py  test_cli.py  test_cot_leakage.py  test_currency_check.py  test_cve_check.py  test_deadline_check.py  test_enforce_audit_retention.py  test_guardrails_colang_wiring.py  test_guardrails_config.py  test_guardrails_routing_check.py  test_guardrails_service.py  test_isolation_agentfs.py  test_isolation_firecracker.py  test_isolation_network.py  test_isolation_runtime.py  test_isolation_session_lock.py  test_isolation_smoke.py  test_jurisdiction_check.py  test_kernel_builder.py  test_manifest_validator.py  test_output_scan.py  test_presidio_redact.py  test_privacy_router.py  test_rail_paraphrase_harness.py  test_red_team_suite.py  test_regulator_check.py  test_rootfs_builder.py  test_self_check_direct_redaction.py  test_stale_date_check.py  test_standards_version_check.py  test_verdict_check.py
tests/fixtures/: audit_log_chain_broken.jsonl  audit_log_tampered.jsonl  audit_log_valid.jsonl  manifest_invalid.yaml  manifest_probe.yaml  manifest_valid.yaml  manifest_vendor_guard_pyprobe.yaml  pii_samples.json  red_team_cases.json
tests/harness/: rail_paraphrases_baseline.json
