[project]
name = "saaf-compliance-shell"
version = "0.1.0"
description = "Modular compliance wrapper for AI agent workloads"
requires-python = ">=3.11"
dependencies = [
    "nemoguardrails>=0.10.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
saaf-shell = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
nlp = [
    "spacy>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["modules*", "guardrails*"]

[tool.setuptools.package-data]
guardrails = ["*.co", "*.yml"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
