[project]
name = "saaf-compliance-shell"
# Version is derived from the latest git tag via ``setuptools_scm``;
# see the ``[tool.setuptools_scm]`` section at the bottom of this file.
# The tag is the authoritative source — no pyproject string to drift
# against it. A generated ``modules/_version.py`` carries the resolved
# version for runtime introspection and for sdist builds without a
# reachable git checkout.
dynamic = ["version"]
description = "Modular compliance wrapper for AI agent workloads"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
# TODO(v0.9): retest on 3.14 once nemoguardrails >= 0.11 is released and
# drops its own <3.14 cap. The upper bound rots visibly so this line
# doesn't survive a 3.14 RC without being revisited.
requires-python = ">=3.11,<3.14"
dependencies = [
    "nemoguardrails>=0.10.0",
    "langchain-openai>=0.1.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "openai>=1.30",
    "pyyaml>=6.0",
]

[project.scripts]
saaf-shell = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
nlp = [
    "spacy>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 140
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
# E501 is advisory — tests commonly hold long compliance fixtures.
# B008 would fire on FastAPI Depends(...) defaults; not relevant here yet.

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["modules", "cli.py"]
ignore_missing_imports = true
follow_imports = "silent"
# Strictness is phased in — start with the cheap wins and tighten later.
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["modules*", "guardrails_config*"]

[tool.setuptools.package-data]
guardrails_config = ["*.co", "*.yml"]

[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Resolved version lands in a generated ``modules/_version.py`` (gitignored)
# so ``python -c "from modules._version import __version__"`` always works.
# ``fallback_version`` only kicks in when neither a git checkout nor
# ``SETUPTOOLS_SCM_PRETEND_VERSION`` are available (e.g. tarball installs
# on hosts without git metadata); it's intentionally a ``+unknown`` local
# segment so the drift is obvious in logs.
#
# ``tag_regex`` accepts both plain release tags (``v0.9.0``) and the
# hardening-wave checkpoint tags (``v0.9.0-s1`` through ``v0.9.0-s7``)
# and normalizes them to the core ``MAJOR.MINOR.PATCH`` so PEP 440 is
# happy. Commits past the most recent checkpoint get a
# ``0.9.0.devN+g<short>`` dev version automatically.
write_to = "modules/_version.py"
fallback_version = "0.0.0+unknown"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)(?:-s\\d+)?$"
